# picket-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: picket-architecture.drawio
src/picket/: __init__.py  audit.py  condition.py  daemon.py  errors.py  handler.py  models.py  probes.py  runbooks.py  server.py  store.py  supervisor.py  watches.py
src/picket/conditions/: __init__.py  condition.py  probes.py
src/picket/core/: __init__.py  errors.py  models.py
src/picket/execution/: __init__.py  handler.py  runbooks.py
src/picket/mcp/: __init__.py  server.py
src/picket/persistence/: __init__.py  audit.py  store.py
src/picket/runtime/: __init__.py  daemon.py  supervisor.py  watches.py
tests/: conftest.py  test_audit.py  test_condition.py  test_daemon.py  test_handler.py  test_hardening.py  test_models.py  test_probe_integration.py  test_probes.py  test_runbooks.py  test_security.py  test_server.py  test_smoke.py  test_smoke_claude.py  test_store.py  test_stress.py  test_watches.py
