[project]
name = "picket-mcp"
version = "0.1.0"
description = "Event-driven API watcher MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastmcp>=2.3",
    "httpx>=0.27",
    "jsonpath-ng>=1.6",
    "psutil>=5.9",
    "pydantic>=2",
    "tomli-w>=1.0",
]

[project.scripts]
picket = "picket.server:main"
picket-supervisor = "picket.runtime.supervisor:main"

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picket"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: real-process smoke tests (opt-in; run with -m smoke)",
    "stress: real-process stress/durability tests (opt-in; run with -m stress)",
    "claude_smoke: smoke tests that launch a real claude -p (opt-in, spends tokens)",
]
addopts = "-m 'not smoke and not stress and not claude_smoke'"
